[package]
name = "tools"
version = "0.1.0"
edition = "2024"

[dependencies]
axum = "0.8.1"
axum-response-cache = "0.2.0"
reqwest = { version = "0.12.12", features = ["json"] }
serde = { version = "1.0.217", features = ["derive"] }
serde_json = "1.0.137"
thiserror = "2.0.11"
tokio = { version = "1.43.0", features = ["macros", "rt-multi-thread"] }
